# src/swagger.json
@@ -208,6 +208,50 @@
                 }
             }
         },
+        "/api/user/plan/delete/{planId}": {
+            "put": {
+                "tags": ["MyPage"],
+                "description": "플랜을 복구 할 수 있습니다.",
+                "parameters": [
+                    {
+                        "name": "planId",
+                        "in": "path",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "description": "Authorization",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "플랜 복구 완료",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "message": {
+                                    "type": "string",
+                                    "example": "복구를 성공하였습니다."
+                                }
+                            },
+                            "xml": {
+                                "name": "main"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "값이 알맞게 들어오지 않을 경우"
+                    },
+                    "404": {
+                        "description": "플랜을 찾을 수 없는 경우"
+                    }
+                }
+            }
+        },
         "/api/plan/": {
             "post": {
                 "tags": ["Plan"],
